--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -28,7 +28,8 @@ jobs:
         git config --global user.name "github-actions[bot]"
         npm install
         npm run build
-
+        git push origin master
+        
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
