--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -2,9 +2,8 @@ name: NodeJS with Webpack
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    tags:        
+      - v*
 
 jobs:
   build:
@@ -24,11 +23,8 @@ jobs:
 
     - name: Build
       run: |
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git config --global user.name "github-actions[bot]"
         npm install
         npm run build
-        git push origin master
         
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
