--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -15,6 +15,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        ref: ${{ github.GITHUB_BASE_REF }}
 
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
