--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -22,11 +22,12 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-
+        
+    - name: Npm Install    
+      uses: bahmutov/npm-install@v1
+    
     - name: Build
-      run: |
-        npm install
-        npm run build
+      run:  npm run build
         
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
