--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -25,6 +25,8 @@ jobs:
         
     - name: Npm Install    
       uses: bahmutov/npm-install@v1
+      with:
+        useLockFile: false
     
     - name: Build
       run:  npm run build
